--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "pucp.grupo4d.Main",
+            "projectName": "server_298085c"
+        },
         {
             "type": "java",
             "name": "Current File",
