LDX /update -m "MODELANDO"
Algoritmo.java esta mal xd, agreguen otro archivo tipo Algoritmo2 , o SegundoAlgoritmo para el PSO , para evitar conflictos al despues hacer merge. CUALQUIER CAMBIO EN EL MODELO DEBE SER REVISADO ANTES.

--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -8,6 +8,20 @@
             "type": "java",
             "name": "Main",
             "request": "launch",
+            "mainClass": "pucp.grupo4d.programa.Main",
+            "projectName": "server_298085c"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "pucp.grupo4d.program.Main",
+            "projectName": "server_298085c"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
             "mainClass": "pucp.grupo4d.Main",
             "projectName": "server_298085c"
         },
