--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.4.1",
     "sass": "^1.93.2"
   },
   "devDependencies": {
