NO PULLEAR AUN (85%/100)
Falta corregir los adapters segun el nuevo modelo.
Falta implementar la nueva version del algoritmo al backend.
Mastarde lo acabo tengo examen xde

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 # >> VARIABLES PARA CADA ENTORNO
 # URLs
-db.local=jdbc:mysql://localhost:3306/morapack4d?useSSL=false&serverTimezone=UTC
-db.aws=jdbc:mysql://morapack4d.cncyxrqskpi9.us-east-1.rds.amazonaws.com:3306/morapack4d?useSSL=false&serverTimezone=UTC
+db.local=jdbc:mysql://localhost:3306/morapack4d?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+db.aws=jdbc:mysql://morapack4d.cncyxrqskpi9.us-east-1.rds.amazonaws.com:3306/morapack4d?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 # Usuarios
 db.user.local=Candy
 db.user.aws=root
 
 # Passwords
-db.pass.local=MYSQLo.0?!
+db.pass.local=MYSQLo.0?!987
 db.pass.aws=josue12345
 
 # >> ENTORNO
 spring.application.name=morapack
 server.port=8080
-db.active=local
+db.active=aws
 
 # >> DATA SOURCE
 spring.datasource.url=${db.${db.active}}
