--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,7 +14,7 @@ db.pass.aws=josue12345
 # >> ENTORNO
 spring.application.name=morapack
 server.port=8080
-db.active=aws
+db.active=local
 
 # >> DATA SOURCE
 spring.datasource.url=${db.${db.active}}
