--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,28 +1,11 @@
-# >> VARIABLES PARA CADA ENTORNO
-# URLs
-db.local=jdbc:mysql://localhost:3306/morapack4d?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-db.aws=jdbc:mysql://morapack4d.cncyxrqskpi9.us-east-1.rds.amazonaws.com:3306/morapack4d?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-
-# Usuarios
-db.user.local=Candy
-db.user.aws=root
-
-# Passwords
-db.pass.local=MYSQLo.0?!987
-db.pass.aws=josue12345
-
-# >> ENTORNO
 spring.application.name=morapack
+
+# Perfil activo (puedes cambiar entre local o aws)
+spring.profiles.active=aws
+
 server.port=8080
-db.active=local
 
-# >> DATA SOURCE
-spring.datasource.url=${db.${db.active}}
-spring.datasource.username=${db.user.${db.active}}
-spring.datasource.password=${db.pass.${db.active}}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# >> JPA / HIBERNATE
+# Configuración común de JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
