--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=morapack
 
 # Perfil activo (puedes cambiar entre local o aws)
-spring.profiles.active=aws
+spring.profiles.active=local
 
 server.port=8080
 
