--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=morapack
 
 # Perfil activo (puedes cambiar entre local o aws)
-spring.profiles.active=local
+spring.profiles.active=aws
 
 server.port=8080
 
 # Configuracion comun de JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
